<resources>
    <string name="app_name">My Application</string>
    <string name="username_e_mail">Username/E-mail:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search_username">Search Username</string>


</resources>