<?xml version="1.0" encoding="UTF-8"?>


    <RelativeLayout tools:context=".MainActivity" android:background="@drawable/gradient" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView android:layout_height="150dp" android:layout_width="120dp" android:layout_centerHorizontal="true" android:layout_alignParentTop="true" app:srcCompat="@drawable/logo" android:layout_marginTop="40dp" android:id="@+id/imageView"
        android:contentDescription="@null" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="-51dp"
            android:layout_marginBottom="375dp"
            android:text="@string/username_e_mail"
            android:textColor="#F8F4F4"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="377dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="330dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginBottom="291dp"
            android:text="@string/password"
            android:textColor="#FFFDFD"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="242dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="159dp"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="172dp"
            android:text="@string/login"
            app:iconTint="#000000" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="240dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="169dp"
            android:layout_marginBottom="119dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="204dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="103dp"
            android:background="#150909"
            android:backgroundTint="#530B0B"
            android:text="@string/sign_up"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button3"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="172dp"
            android:layout_marginBottom="34dp"
            android:text="@string/forgot_password" />

    </RelativeLayout>

    <LinearLayout android:layout_height="50dp" android:layout_width="wrap_content" android:id="@+id/linearLayout" android:layout_alignStart="@+id/imageView"
        android:layout_alignParentBottom="true" android:orientation="horizontal"/>

</RelativeLayout>